--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 	implementation 'org.springframework.modulith:spring-modulith-starter-core'
 //	implementation 'com.h2database:h2'
 	implementation 'org.postgresql:postgresql'
+
+	// html template
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
