--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=springboot.demo
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/local?currentSchema=LIL
 spring.datasource.username=postgres
