--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=springboot.demo
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/local?currentSchema=LIL
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=none
+
+
+#spring.jpa.database=postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5432/local?currentSchema=LIL
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
 server.port=8082
