--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.modulith:spring-modulith-starter-core'
-//	implementation 'com.h2database:h2'
-	implementation 'org.postgresql:postgresql'
+	implementation 'com.h2database:h2'
+//	implementation 'org.postgresql:postgresql'
 
 	// html template
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
